--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Galería
+# title: Galería
 photos:
   - image: /uploads/20181118-randy.jpg
     caption: Randy tiene sueño y al llegar la noche, cuando el frio arrecia, elige el mejor sitio de la cama para estar calentito.
