Added some photos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 ---
 # title: Galería
 photos:
+	- image: /uploads/IMG-20180714-WA0008.jpg
+		caption: Me encanta meterme bajo las sabanas. Soy tan feliz!
+	- image: /uploads/IMG-20180722-WA0001-01.jpg
+		caption: Preciosos ojos color miel que te miran embobado.
+	- image: /uploads/IMG_20180723_190704_039-01.jpg
+		caption: Llegó la primavera para Randy
+	- image: /uploads/IMG_20180723_190801_403-01.jpg
+		caption: También llego la primavera para Roxy
   - image: /uploads/20181118-randy.jpg
     caption: Randy tiene sueño y al llegar la noche, cuando el frio arrecia, elige el mejor sitio de la cama para estar calentito.
   - image: /uploads/IMG_20181106_191223_204.jpg
     caption: Esta es Roxy la negrita rapera. Desde pequeñita siempre le ha gustado bailar, y tiene mucho ritmo!    
   - image: /uploads/IMG-20181102-WA0002.jpg
-    caption: <strong>Viendo pasar la gente</strong>. Cualquier oportunidad es buena, para asomarse por la ventana a observar la gente en la calle.
+		caption: <strong>Viendo pasar la gente</strong>. Cualquier oportunidad es buena, para asomarse por la ventana a observar la gente en la calle.
+	- image: /uploads/IMG_20181117_101451_093
+		caption: ¿Quien ha tirado la maceta al suelo y se ha revolcado en la tierra?
 ---
 
 <ul class="gallery">
